# SmartRAG-Preprocessor

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_JP.md  RELEASE_NOTES_TEMPLATE.md  RELEASE_TEMPLATE.md  STARTUP_GUIDE.md  docker-compose.yml  package-lock.json  package.json  start.bat  start.sh  test_api.sh  test_start.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/api/endpoints/: export.py  processing.py  upload.py  websocket.py
backend/app/core/: config.py  database.py
backend/app/models/: __init__.py  file.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: Layout.tsx
frontend/src/hooks/: useFileUpload.ts  useWebSocket.ts
frontend/src/pages/: Dashboard.tsx  Editor.tsx  Export.tsx  FileUpload.tsx  Processing.tsx  Settings.tsx  Tasks.tsx
frontend/src/stores/: useAppStore.ts
frontend/src/types/: index.ts
frontend/src/utils/: api.ts  helpers.ts  version.ts
scripts/: update-version.js
